# -loto-win-prediction-

./: .gitignore  Lotto.csv  README.md  pyproject.toml  requirements.txt
src/: analyzer.py  app.py  main.py  predictor.py  scheduler.py  scraper.py
static/css/: style.css
templates/: base.html  history.html  index.html  predictions.html  statistics.html
tests/: test_app.py
