[tool.poetry]
name = "loto-win-prediction"
version = "0.1.0"
description = ""
authors = ["NanoShark"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
pandas = "2.0.3"
numpy = "1.24.3"
scikit-learn = "1.3.0"
matplotlib = "3.7.2"
seaborn = "0.12.2"
schedule = "1.2.0"
python-dotenv = "1.0.0"
Flask = "2.3.3"
openpyxl = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
