[tool.poetry]
name = "loto-win-prediction"
version = "0.1.0"
description = "Lottery prediction system using machine learning"
authors = ["NanoShark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
pandas = "2.0.3"
numpy = "^1.20.0"
scikit-learn = "1.3.0" 
matplotlib = "3.7.2"
seaborn = "0.12.2"
schedule = "1.2.0"
python-dotenv = "1.0.0"
Flask = "2.3.3"
openpyxl = "3.1.2"
selenium = "^4.10.0"

[tool.poetry.dev-dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"

# Code quality
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

# Security scanning
bandit = "^1.7.0"

# Production server
gunicorn = "^20.1.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Code formatting configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["loto_win_prediction"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."] # Add this line to ensure src can be found
addopts = "-ra -q --cov=loto_win_prediction --cov-report=html --cov-report=term"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["loto_win_prediction"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*"
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # Skip assert_used test